--- a/index.html
+++ b/index.html
@@ -172,18 +172,21 @@
 		<div class="icf-pro1"><i id="face" class="fab fa-facebook-f"></i></div>
 		<div class="icl-pro1"><i id="link" class="fab fa-linkedin-in"></i></div>
 		<div class="ict-pro1"><i id="twit" class="fab fa-twitter"></i></div>
+		<div class="icp-pro1"><i id="pint" class="fab fa-pinterest"></i></div>
 		
 		<div class="pro2"></div>
 		<div class="name2"><p>Mary Doe</p></div>
 		<div class="icf-pro2"><i id="face" class="fab fa-facebook-f"></i></div>
 		<div class="icl-pro2"><i id="link" class="fab fa-linkedin-in"></i></div>
 		<div class="ict-pro2"><i id="twit" class="fab fa-twitter"></i></div>
+		<div class="icp-pro2"><i id="pint" class="fab fa-pinterest"></i></div>
 		
 		<div class="pro3"></div>
 		<div class="name3"><p>Paul Doe</p></div>
 		<div class="icf-pro3"><i id="face" class="fab fa-facebook-f"></i></div>
 		<div class="icl-pro3"><i id="link" class="fab fa-linkedin-in"></i></div>
 		<div class="ict-pro3"><i id="twit" class="fab fa-twitter"></i></div>
+		<div class="icp-pro3"><i id="pint" class="fab fa-pinterest"></i></div>
 		
 
 
@@ -220,13 +223,13 @@
 		<div class="p-foot4"><p>www.senkheweul.sn</p></div>
 
 		<div class="last-ico1"><i id="l-rs" class="fab fa-facebook-f"></i></div>
-		<div class="last-ico2"><i id="l-r" class="fab fa-lenkedin-in"></i></div>
-		<div class="last-ico3"><i id="l-r" class="fab fa-twitter"></i></div>
-		<div class="last-ico4"><i id="l-r" class="fab fa-pinterest-square"></i></div>
+		<div class="last-ico2"><i id="l-r" class="fab fa-twitter"></i></div>
+		<div class="last-ico3"><i id="l-r" class="fab fa-linkedin-in"></i></div>
+		<div class="last-ico4"><i id="l-r" class="fab fa-pinterest"></i></div>
 		<div class="last-ico5"><i id="l-r" class="fab fa-youtube"></i></div>
 		<div class="last-ico6"><i id="l-r" class="fab fa-github"></i></div>
 
-		<div class="last-fm1"><input placeholder="Subscribe For Updates?" class="last-tfm"/></div>
+		<div class="last-fm1"><input type="email" placeholder="Subscribe For Updates?" class="last-tfm"/></div>
 			<div class="last-fm2"><button class="last-bfm">SOUSCRIRE</button></div>
 
 	</body>
